# python-zero-spinner

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-release.yml  release-tag.yml  tag-release-publish.yml  tests.yml
src/examples/: example.py
src/integrations/: test_package_import.py
src/yeeti/cli_module/: main.py
src/yeeti/module/: main.py
src/yeeti/test_module/: example.py  example_test.py
src/yeeti/zero_spinner/: __init__.py  main.py  main_test.py
